Merged troubleshooting into building.md.